--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "browser-fs-access": "^0.34.1",
     "idb": "^7.1.1",
+    "jszip": "^3.10.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
