--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/sha1": "^1.1.3",
     "browser-fs-access": "^0.34.1",
     "idb": "^7.1.1",
     "jszip": "^3.10.1",
@@ -25,6 +26,7 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sha1": "^1.1.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
